# ctfr_benchmarks

./: .gitignore  .readthedocs.yaml  Makefile  README.md  pyproject.toml  requirements.txt  setup.cfg  setup.py
docs/: conf.py  index.rst
notebooks/: plots.ipynb
scripts/: benchmarks.py
src/ctfr/: __init__.py  methods_dict.py
src/ctfr/implementations/: baseline_fls_cy.pyx  baseline_lt_cy.pyx  baseline_sls_cy.pyx  baseline_swgm_cy.pyx  sls_h_cy.pyx
src/ctfr/utils/: private.py
src/ctfr_bm/: __init__.py  meta.py  methods_dict.py
src/ctfr_bm/core/: ctfr.py  ctfr_from_specs.py
src/ctfr_bm/implementations/: baseline_fls_cy.pyx  baseline_lt_cy.pyx  baseline_sls_cy.pyx  baseline_swgm_cy.pyx  fls_cy.pyx  lt_cy.pyx  sls_h_cy.pyx  sls_i_cy.pyx  swgm_cy.pyx
src/ctfr_bm/utils/: arguments_check.py  data.py  methods.py  private.py
