[build-system]
requires = ["setuptools", "wheel", "cython"]
build-backend = "setuptools.build_meta"

[project]
name = "ctfr"
dynamic = ["version", "authors", "dependencies"]
description = "Efficient toolbox for computing combined time-frequency representations of audio signals."
readme = "README.md"
requires-python = ">=3.11"

[tool.setuptools.dynamic]
version = {attr = "ctfr.__version__"}
dependencies = {file = "requirements.txt"}

[tool.setuptools.packages.find]
where = ["src"]