[build-system]
requires = ["setuptools", "wheel", "cython"]
build-backend = "setuptools.build_meta"

[project]
name = "ctfr"
dynamic = ["version", "authors", "optional-dependencies"]
description = "Efficient toolbox for computing combined time-frequency representations of audio signals."
readme = "README.md"
requires-python = ">=3.11"
dependencies = ["numpy", "librosa", "scipy", "pooch", "matplotlib"]

[tool.setuptools.dynamic]
version = {attr = "ctfr.__version__"}
optional-dependencies.exact = {file = "requirements.txt"}

[tool.setuptools.packages.find]
where = ["src"]