[build-system]
requires = ["setuptools", "wheel", "cython"]
build-backend = "setuptools.build_meta"

[project]
name = "ctfr_bm"
dynamic = ["version", "authors", "optional-dependencies"]
description = "Efficient toolbox for computing combined time-frequency representations of audio signals."
readme = "README.md"
requires-python = ">=3.9"
dependencies = ["numpy", "librosa", "scipy", "pooch", "matplotlib"]

[tool.setuptools.dynamic]
version = {attr = "ctfr_bm.__version__"}
optional-dependencies.exact = {file = "requirements.txt"}

[tool.setuptools.packages.find]
where = ["src"]
